gitops/operators/eso/templates/namespace-operand.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    app.kubernetes.io/part-of: hybridsovereign-gitops
    hybridsovereign.redhat/gitops-owned: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    argocd.argoproj.io/sync-options: Prune=false
